// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React should allow using hooks 1`] = `
<div>
  <h1>
    bar2
  </h1>
</div>
`;

exports[`React should allow using hooks with scoped tracking 1`] = `
<div>
  <h1>
    bar3
  </h1>
</div>
`;

exports[`React should allow using mocked Overmind 1`] = `
<div>
  <h1>
    bar
  </h1>
</div>
`;
